# savagewheels

./: .cproject  .gitignore  CMakeLists.txt  Config.h.in  HISTORY  INSTALL  INSTALL.md  LICENSE  Makefile  README  README.md  SavageWheels.opt  SavageWheels.sln  SavageWheels.vcproj  TODO  build.bat  build.sh  dist-build.bat  dist-build.sh  excluded  post-build.cmd  pre-build.cmd  run.sh  savagewheels.desktop  savagewheels.in
libs/: README.md
src/: Bindings.cpp  Bindings.h  CAnimation.cpp  CAnimation.h  CBufferedReader.cpp  CBufferedReader.h  CDeadToy.cpp  CDeadToy.h  CGame.cpp  CGame.h  CKdf.cpp  CKdf.h  CMainMenu.cpp  CMainMenu.h  CSdl.cpp  CSdl.h  CSounds.cpp  CSounds.h  CSwv_module.cpp  CTimer.cpp  CTimer.h  CVehicle.cpp  CVehicle.h  Cgame.cpp  Cgame.h  Csdl.cpp  Csdl.h  Cswv_module.cpp  Cswv_module.h  Cvehicle.cpp  Cvehicle.h  Main.cpp  Main.h  Utils.cpp  Utils.h  res.rc
tools/: convert-music-web.sh  shell_minimal_itch.html
tools/ai_attemp/: ai_attemp.dsp  main.cpp
tools/cut_gfx/: cut_gfx.vbp  cut_gfx.vbw  frmMain.frm  frmMain.frx
tools/intro/: Script3.aps  Script3.rc  Script3.res  intro.opt  intro.vcproj  main.cpp  mciAVI.cpp  mciAVI.h
tools/swv_builder/: CMakeLists.txt  _old_Cswm_module.cpp  _old_Cswm_module.h  main.cpp  main.h  swv_builder.dsp
